--- a/lista1/Ex4.html
+++ b/lista1/Ex4.html
@@ -13,7 +13,13 @@
         let nota2 = parseInt(window.prompt("Digite a nota 2: "));
         let nota3 = parseInt(window.prompt("Digite a nota 3: "));
         let soma = nota1 + nota2 + nota3;
-        window.alert("soma dos dois numeros: " + soma);
+        let media = soma / 3;
+        if(media >=6){
+            console.log("Aluno aprovado com média: " + media);
+        } else {
+            console.log("Aluno reprovado com média: " + media);
+        }
+        
         
 
     </script>
