--- a/lista1/Ex3.html
+++ b/lista1/Ex3.html
@@ -11,7 +11,7 @@
         let cnh;
 
         if(idade < 18){
-            window.alert("Você é menor de idade e não pode digiir");
+            window.alert("Você é menor de idade e não pode digirir");
         } 
 
         if(idade >=18){
